--- a/RealEstateProject/RealEstateProject.csproj
+++ b/RealEstateProject/RealEstateProject.csproj
@@ -152,6 +152,12 @@
     <Compile Include="Edit\EditAppartment.Designer.cs">
       <DependentUpon>EditAppartment.cs</DependentUpon>
     </Compile>
+    <Compile Include="Edit\EditMonthlyRentalPayment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit\EditMonthlyRentalPayment.Designer.cs">
+      <DependentUpon>EditMonthlyRentalPayment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Edit\EditPerson.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -216,6 +222,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Edit\EditAppartment.resx">
       <DependentUpon>EditAppartment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit\EditMonthlyRentalPayment.resx">
+      <DependentUpon>EditMonthlyRentalPayment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Edit\EditPerson.resx">
       <DependentUpon>EditPerson.cs</DependentUpon>
