--- a/RealEstateProject/RealEstateProject.csproj
+++ b/RealEstateProject/RealEstateProject.csproj
@@ -253,8 +253,15 @@
     <Compile Include="Add\PredefinedOptions.Designer.cs">
       <DependentUpon>PredefinedOptions.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\RealEstateModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\RealEstateFullMonthlyReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reports\RealEstateFullMonthlyReport.Designer.cs">
+      <DependentUpon>RealEstateFullMonthlyReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reports\RealEstates.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -329,6 +336,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Reports\RealEstateFullMonthlyReport.resx">
+      <DependentUpon>RealEstateFullMonthlyReport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reports\RealEstates.resx">
       <DependentUpon>RealEstates.cs</DependentUpon>
     </EmbeddedResource>
