--- a/RealEstateProject/RealEstateProject.csproj
+++ b/RealEstateProject/RealEstateProject.csproj
@@ -13,7 +13,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\mohmm\Desktop\realestates\2\</PublishUrl>
+    <PublishUrl>C:\Users\mohmm\Desktop\realestates2\1\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -23,7 +23,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>4</ApplicationRevision>
+    <ApplicationRevision>5</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -193,6 +193,12 @@
     <Compile Include="Add\AddRental.Designer.cs">
       <DependentUpon>AddRental.cs</DependentUpon>
     </Compile>
+    <Compile Include="Auth.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Auth.Designer.cs">
+      <DependentUpon>Auth.cs</DependentUpon>
+    </Compile>
     <Compile Include="Connection.cs" />
     <Compile Include="Dialogs\RealEsateDialog.cs">
       <SubType>Form</SubType>
@@ -326,6 +332,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Add\AddRental.resx">
       <DependentUpon>AddRental.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Auth.resx">
+      <DependentUpon>Auth.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\RealEsateDialog.resx">
       <DependentUpon>RealEsateDialog.cs</DependentUpon>
